[package]
name = "scm2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
lalrpop-util = "0.19.7"
unic-ucd-ident = "0.9"
unicode_names2 = "0.5"
phf = { version = "0.10", features = ["macros"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
chrono = {version = "0.4", features = ["serde"] }
bincode = "1.3"
smallvec = "1.9"
num-traits = "0.2.15"

[build-dependencies]
lalrpop = "0.19.7"
phf_codegen = "0.11.1"